tests/kiama/positive/L1/const.ob
MODULE const;

CONST
    aconst1 = 1;
    aconst2 = aconst1 + 100;
    aconst3 = 400 DIV aconst2;

VAR
    avar : INTEGER;

BEGIN
    avar := aconst1 * aconst2 MOD aconst3
END const.
