tests/kiama/negative/type_errors/L2/8_badfor3.ob
MODULE badfor;

VAR
    avar : INTEGER;
    bvar : BOOLEAN;

BEGIN
    FOR bvar := FALSE TO TRUE DO
        avar := 42
    END
END badfor.
